When performing operation 'Make single user' -> 'obj&data', object is removed from group. #47787

Closed
opened 2016-03-14 01:36:46 +01:00 by Jose Conseco · 9 comments

OS: win7
Blender: 2.77 rc2 (or later). Hash: 02cabda

Let's say I have Cube object which is member of 'Cube ' group. If I use 'Make single user' -> 'obj&data' on it, it is getting removed from group. This happens only if object was linked to scene using :
scene.objects.link(cubeObj),
before using 'Make single user' operator.

Below is blend file with two example groups - one working ok (torus), second not working (cube).
MakeSingleUser_02.blend
Steps to reproduce:

  1. Run script, from above blend file, to link cube to scene.
  2. use 'U'-> 'make single user' -> 'obj&data' on cube.
    Result: cube is removed from group
    Expected result: cube should remain in group. Worked ok in 2.76. Works ok on torus in same file.
OS: win7 Blender: 2.77 rc2 (or later). Hash: 02cabda Let's say I have Cube object which is member of 'Cube ' group. If I use 'Make single user' -> 'obj&data' on it, it is getting removed from group. This happens only if object was linked to scene using : scene.objects.link(cubeObj), before using 'Make single user' operator. Below is blend file with two example groups - one working ok (torus), second not working (cube). [MakeSingleUser_02.blend](https://archive.blender.org/developer/F290147/MakeSingleUser_02.blend) Steps to reproduce: 1. Run script, from above blend file, to link cube to scene. 2. use 'U'-> 'make single user' -> 'obj&data' on cube. **Result:** cube is removed from group **Expected result**: cube should remain in group. Worked ok in 2.76. Works ok on torus in same file.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JoseConseco

Added subscriber: @JoseConseco

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Submitted D1854. this makes the function work as intended,
though the way groups are handled here could be done differently.

Submitted [D1854](https://archive.blender.org/developer/D1854). this makes the function work as intended, though the way groups are handled here could be done differently.

Added subscriber: @mont29

Added subscriber: @mont29

Also related to #47482. Will answer more in D1854.

Also related to #47482. Will answer more in [D1854](https://archive.blender.org/developer/D1854).
Bastien Montagne self-assigned this 2016-03-14 14:42:45 +01:00

This issue was referenced by 6b1d77a805

This issue was referenced by 6b1d77a8052b0706ef2277cb1a5e4f3c67310806

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks for the fix. My bad that I didn't connected this bug with #47482 . This would simplify your work I think.

Thanks for the fix. My bad that I didn't connected this bug with [#47482 ](https://developer.blender.org/T47482). This would simplify your work I think.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47787
No description provided.